{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 161,
  "lineage": "7e4fb93a-0504-9a63-4d79-442537b27c77",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/zones/europe-west1-b/instanceGroups/web-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-04-24T03:07:42.778-07:00",
            "enable_cdn": false,
            "fingerprint": "49pcWLxHnJw=",
            "generated_id": 342747343997088641,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/global/healthChecks/tcp-health-check"
            ],
            "id": "projects/wideops-support-393412/global/backendServices/web-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-backend",
            "port_name": "http",
            "project": "wideops-support-393412",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/global/backendServices/web-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.tcp_health_check",
            "google_compute_instance_group.web_instance_group",
            "google_compute_network.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-24T03:07:28.123-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wideops-support-393412/global/firewalls/allow-ssh-http",
            "log_config": [],
            "name": "allow-ssh-http",
            "network": "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/global/networks/custom-vpc",
            "priority": 1000,
            "project": "wideops-support-393412",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/global/firewalls/allow-ssh-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "lb_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "forwarding_rule_id": 4261489231582966623,
            "id": "projects/wideops-support-393412/global/forwardingRules/web-forwarding-rule",
            "ip_address": "34.111.196.142",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "wideops-support-393412",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/global/forwardingRules/web-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/global/targetHttpProxies/web-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.tcp_health_check",
            "google_compute_instance_group.web_instance_group",
            "google_compute_network.custom_vpc",
            "google_compute_target_http_proxy.http_proxy",
            "google_compute_url_map.web_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_test_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20240709",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/zones/europe-west1-b/disks/vm-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-04-24T03:07:51.911-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/wideops-support-393412/zones/europe-west1-b/instances/vm-instance",
            "instance_id": "4698490613373842329",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "startup-script": "    #!/bin/bash\n    sudo apt update -y\n    sudo apt install apache2 -y\n    echo \"This is Boris' web server!\" \u003e /var/www/html/index.html\n    mkdir -p /var/www/html/.secret\n    echo \"Secret File!\" \u003e /var/www/html/.secret/file1.txt\n"
            },
            "metadata_fingerprint": "2jLTZcP0vl4=",
            "name": "vm-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.241.169.240",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/global/networks/custom-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/regions/europe-west1/subnetworks/subnet-1",
                "subnetwork_project": "wideops-support-393412"
              }
            ],
            "project": "wideops-support-393412",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/zones/europe-west1-b/instances/vm-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "server",
              "web"
            ],
            "tags_fingerprint": "GQnwjyknru0=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.custom_vpc",
            "google_compute_subnetwork.subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/wideops-support-393412/global/networks/custom-vpc",
            "mtu": 0,
            "name": "custom-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8323774127406560187",
            "numeric_id": "8323774127406560187",
            "project": "wideops-support-393412",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/global/networks/custom-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-24T03:07:28.820-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.0.1",
            "id": "projects/wideops-support-393412/regions/europe-west1/subnetworks/subnet-1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/global/networks/custom-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "wideops-support-393412",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/regions/europe-west1/subnetworks/subnet-1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7013347195573744527
          },
          "dependencies": [
            "google_compute_network.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-24T03:08:36.650-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/wideops-support-393412/global/targetHttpProxies/web-http-proxy",
            "name": "web-http-proxy",
            "project": "wideops-support-393412",
            "proxy_bind": false,
            "proxy_id": 3478001477835273035,
            "self_link": "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/global/targetHttpProxies/web-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/global/urlMaps/web-map"
          },
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.tcp_health_check",
            "google_compute_instance_group.web_instance_group",
            "google_compute_network.custom_vpc",
            "google_compute_url_map.web_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "web_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-24T03:08:25.134-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/global/backendServices/web-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "cGxZsxEsH44=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/wideops-support-393412/global/urlMaps/web-map",
            "map_id": 6414300816578425718,
            "name": "web-map",
            "path_matcher": [],
            "project": "wideops-support-393412",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wideops-support-393412/global/urlMaps/web-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.tcp_health_check",
            "google_compute_instance_group.web_instance_group",
            "google_compute_network.custom_vpc"
          ]
        }
      ]
    }
  ]
}